--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>SUSyte<?/title>
+	<title>SUSyte</title>
 </head>
 <body>
 	<link href="https://peterkabin.github.io/SUSyte/saet.html">
