--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 	<title>SUSyte</title>
 </head>
 <body>
-	<link href="https://peterkabin.github.io/SUSyte/saet.html">
+	<a href="https://peterkabin.github.io/SUSyte/saet.html">saet</a>
 </body>
