--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 </head>
 <body>
 	<a href="https://peterkabin.github.io/SUSyte/saet.html">saet</a>
+	<a href="https://peterkabin.github.io/SUSyte/saet2.html">saet with less garbage</a>
 </body>
